updated download page structure, correctly aligning items

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -193,7 +193,7 @@ button:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.download {
+.download, #download {
     display: flex;
     flex-direction: column;
     align-items: center;
